--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "setup": "node setup-db.js"
+    "setup": "node database/db.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
